--- a/pom.xml
+++ b/pom.xml
@@ -96,14 +96,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
+	      <name>Sneha Tadimarri Releases Nexus Repository</name>
+	      <url>http://13.126.74.234:8081/snehatadimarri/repository/walmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-snapshot/</url>
+	      <name>Sneha Tadimarri Snapshot Nexus Repository </name>
+	      <url>http://13.126.74.234:8081/snehatadimarri/repository/walmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
