--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Sneha Tadimarri Releases Nexus Repository</name>
-	      <url><http://43.204.24.94:8081/snehatadimarri/repository/walmart-release/</url>
+	      <url>http://43.204.24.94:8081/snehatadimarri/repository/walmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
